packages/core/test/fixtures/parser/errors/boundary-in-context.idef0
context A-0 "boundary arrows don't belong in context" {
    T1 "ok"
    I1 "stray boundary — error"
}
